codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__loop_nested_actions_popup.snap
---
source: tui/src/chatwidget/tests/loop_menu.rs
expression: "render_bottom_popup(&chat, 100)"
---
  Loop child_one
  active · every 30 minutes · level 2 · parent sch_pare · next not scheduled · tz UTC

› 1. Run now                 Queue this prompt immediately
  2. Edit prompt             Change the prompt used on future runs
  3. Stats                   Show run counts and latest outcomes
  4. Pause                   Stop future automatic runs until resumed
  5. Delete                  Remove this loop and any nested child loops from the thread
  6. Back to loops           Return to all scheduled prompts

  Press enter to confirm or esc to go back
