codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__mcp_manager_empty_popup.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
assertion_line: 376
expression: popup
---
  MCP Servers
  0 servers, 0 tools

  Search MCP servers
› Refresh                    Refresh MCP server status and inventory.
  Add new MCP                Paste a package command, HTTP URL, env keys, or headers.
  No MCP servers configured  Use Add new MCP to paste a command, URL, and env keys.

  Press enter to confirm or esc to go back
